@@ -1,3 +1,8 @@
+2008-12-31  Mirco Bauer <meebey@meebey.net> 
+
+	* MainWindow.cs: Use Session.Connect() API instead of faking user input and
+	  hoping the protocol manager will like our format. (closes trac bug #141)
+
 2008-12-28  Mirco Bauer <meebey@meebey.net> 
 
 	* MainWindow.cs: White space fix.
